--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-    <head>
-        <title>
-{{title}}
-        </title>
-        <style>
-        {color: red;}
-        </style>
-    </head>
-    <body>
-<div>
-    <a href='/logout'>log out</a>
-</div>
-<ul>
-{% with messages = get_flashed_messages(with_categoriess=True) %}
 
-{% for message.category in messages %}
-<li class="{{message}}">{{category}}</li>
+  <head>
 
-{% endfor %}
-</ul>
+    <title>{{title}}</title>
+    
 
-{% endwith %}
+  </head>
 
+  <body>
 
-        {% block content %}
-        {% endblock %}
-    </body>
+    <div>
+
+      <nav>
+
+        <h1><a href="/blog">Build a Blog</a></h1>
+        <a href="/post" class="left">New Post</a>
+        <a href="/blog?sort=oldest">Oldest</a>
+        <a href="/blog?sort=newest">Newest</a>
+
+      </nav>
+      {% block content %}
+      {% endblock %}
+
+    </div>
+
+  </body>
+
 </html>
