--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
       <nav>
 
         <h1><a href="/blog">Build a Blog</a></h1>
-        <a href="/post" class="left">New Post</a>
+        <a href="/post">New Post</a>
         <a href="/blog?sort=oldest">Oldest</a>
         <a href="/blog?sort=newest">Newest</a>
 
