added light css style and normalize

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,12 @@
   <head>
 
     <title>{{title}}</title>
-    
+    <link rel= "stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/normalize.css') }}">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+
 
   </head>
 
@@ -15,7 +20,7 @@
 
       <nav>
 
-        <h1><a href="/blog">Build a Blog</a></h1>
+        <h1 class="blog-nav"><a href="/blog">Build a Blog</a></h1>
         <a href="/post">New Post</a>
         <a href="/blog?sort=oldest">Oldest</a>
         <a href="/blog?sort=newest">Newest</a>
