--- a/templates/post.html
+++ b/templates/post.html
@@ -3,7 +3,7 @@
 {% block content %}
       <div class="new-post">
 
-        <h1 >New Post</h1>
+        <h1 class="new-post">New Post</h1>
 
         <form method='post'>
           <!-- <label for="title">Title:</label><br> -->
