--- a/templates/post.html
+++ b/templates/post.html
@@ -1,21 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-      <div class="new-post">
+      <div class="content content-text wow fadeIn">
 
-        <h1 class="new-post">New Post</h1>
-
-        <form method='post'>
-          <!-- <label for="title">Title:</label><br> -->
-          <input type="text" name="title" value='{{blog_title}}' placeholder="Your Title Here"/>
-          <p class="error">{{title_error}}</p><br><br>
-
-          <textarea type="text" name="body" placeholder="Your Text Here">{{blog_body}}</textarea>
-          <p class="error">{{body_error}}</p><br>
-
-          <input type="submit" value="Post"/>
-
-        </form>
+        <h2>{{ title }}</h2>
+        <p>{{ body }}</p>
+        <p class="pub-date">Posted on: {{ pub_date }}</p>
+        <p class='user'>Posted by: <a href="/blog?userid={{user_id}}">{{ user }}</a></p>
 
       </div>
 {% endblock %}
