--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
       <nav class="blog-nav">
 
-        <h1><a href="/blog" class="blog-nav">Build-a-Blog</a></h1>
+        <h1><a href="/blog" class="blog-nav">Blogz!</a></h1>
         <a href="/post" class="blog-nav-a">New Post</a>
         <a href="/blog?sort=oldest"class="blog-nav-a">Oldest</a>
         <a href="/blog?sort=newest"class='blog-nav-a'>Newest</a>
