lots of revisions, need to commit more often

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,16 +15,17 @@
 
   </head>
 
-  <body class="body">
+  <body>
 
     <div>
 
       <nav class="blog-nav">
 
-        <h1><a href="/blog" class="blog-nav">Blogz!</a></h1>
-        <a href="/post" class="blog-nav-a">New Post</a>
-        <a href="/blog?sort=oldest"class="blog-nav-a">Oldest</a>
-        <a href="/blog?sort=newest"class='blog-nav-a'>Newest</a>
+        <h1><a href="/" class="blog-nav">Blogz!</a></h1>
+        <a href="/blog" class="blog-nav-a">View All Posts</a>
+        <a href="/newpost"class="blog-nav-a">New Post</a>
+        <a href="/logout"class='blog-nav-a'>Logout</a>
+        <a href="/login"class='blog-nav-a'>Login</a>
 
       </nav>
       {% block content %}
