--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,35 +1,47 @@
 body {
-
-    background-color: #daad86);
-    font-family: helvetica, sans-serif;
-    margin:0;
+    background-color: #d5d5d5;
 }
 
 h1{
-    color: #312c32
-}
-}
-.error {
-    color: rgba(255, 0, 0, 0.735);
+    font-family: helvetica, sans-serif;
+    color: #312c32;
 }
 
+/* blog post title*/
+h2{
+    color: #96858f;
+    font-size: 24px;
+    font-weight: 500;
+    padding-bottom: 5px;
+    font-family: helvetica, sans-serif;
 }
-.title {
+
+/* error message */
+.error{
+    color: red;
+    font-family: helvetica;
+    font-size: 20px;
+}
+
+
+.title{
     text-align: left;
     font-size: 32px;
     color: #312c32;
 }
 
+/* blog navigation bar */
 .blog-nav {
-    display: in-line; 
-    background-color:#daad86;
+
+    display: in-line cover; 
+    background-color:#6d7993;
     text-align: left;
     font-family: 'Spicy Rice', cursive;
     font-kerning: normal;
     color: #312c32;
     font-size:100px;
     padding-left:10px;
-    margin-left:0px;
+    margin:0px;
 }
 
 .blog-nav-a {
@@ -58,17 +70,33 @@ h1{
 }
 
 input {
-    background-color:#98dafc;
+    background-color:#9099a2;
     color:#312c32;
     font-size:20px;
     border-radius: 5px;
 }
 
 textarea {
-    background-color:#98dafc;
+    background-color:#9099a2;
     color:#312c32;
     font-size:20px;
     border-radius: 5px;
     width: 450px;
     height: 150px;
+}
+
+/* signup text */
+.signup-text{
+    text-align: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    display:; 
+    background-color:;
+    color: #312c32;
+    font-size:30px;
+}
+
+/* links */
+
+a{
+    color: #96858f;
 }
