--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-      <div class="index">
+      <div>
         <h1>Visitors</h1>
         <hr>
         {% for user in users %}
