--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-      <div class="content content-text wow fadeIn">
+      <div class="body">
 
         <h2>{{ title }}</h2>
         <p>{{ body }}</p>
