--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
       <div class="signup">
 
-        <h1>Sign up to start posting!</h1>
+        <h1>Sign up and start posting!</h1>
 
         <form action="/signup" method="POST">
 
