adding style fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>{{title}}</title>
     <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
     <link rel= "stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+    <link rel= "stylesheet" type="text/css" href= "{{ url_for('static',filename='images.JPG') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/normalize.css') }}">
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
