--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,16 +1,43 @@
+html { 
+    background: url("/static/images/IMG_2957.JPG") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: helvetica, sans-serif;
+    font-size: 20px;
+
+  }
+
+
+
+
 body {
-    background-color: #d5d5d5;
+    /*background-color: #d5d5d5;*/
+    font-family: helvetica, sans-serif;
+    font-size: 20px;
+    /*opacity: 0.5;*/
+   /* background-image: url("/static/images/IMG_2957.JPG");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: right;*/
 }
 
 h1{
+    
+    /*image: url("/static/images/IMG_2957.JPG");
+    background-repeat: no-repeat;
+    background-size: 300px x 600px;
+    background-position: cover;*/
     font-family: helvetica, sans-serif;
     color: #312c32;
 }
 
 /* blog post title*/
 h2{
+    text-align:center;
     color: #96858f;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 500;
     padding-bottom: 5px;
     font-family: helvetica, sans-serif;
@@ -33,8 +60,9 @@ h2{
 /* blog navigation bar */
 .blog-nav {
 
-    display: in-line cover; 
+    display:; 
     background-color:#6d7993;
+    opacity:0.9;
     text-align: left;
     font-family: 'Spicy Rice', cursive;
     font-kerning: normal;
@@ -102,10 +130,20 @@ a{
 }
 
 .pub-date{
-    text-align: left;
+    text-align: center;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     display:; 
     background-color:;
     color: #312c32;
-    font-size:15px;
+    font-size:20px;
+}
+
+p{
+    text-align: center;
+    font-family: Helvetica, sans-serif;
+    font-size: 25px;
+
+}
+hr{
+    
 }
