--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
     <div>
 
-      <nav class="blog-nav">
+      <nav <--class="blog-nav">
 
         <h1><a href="/" class="blog-nav">Blogz!</a></h1>
         <a href="/blog" class="blog-nav-a">View All Posts</a>
