--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-      <div class="blog blog-text wow fadeIn">
+      <div class="blog blog-text">
 
         <h1>Blogz! Posts</h1>
 
